--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "formidable": "^3.5.1",
+    "multer": "^1.4.5-lts.1",
     "node-forge": "^1.3.1",
     "pdf-lib": "^1.17.1",
     "selfsigned": "^2.1.1"
